chore: commit all workspace changes

--- a/cs360-dashboard/index.html
+++ b/cs360-dashboard/index.html
@@ -200,5 +200,10 @@
 
     <script src="js/script.js"></script>
     <script src="js/charts.js"></script>
+<iframe 
+    src="components/chatbot.html" 
+    style="border: none; position: fixed; bottom: 0; right: 0; z-index: 9999;"
+    title="CS360 AI Chatbot">
+</iframe>
 </body>
 </html>
