--- a/cs360-dashboard/pages/alerts.html
+++ b/cs360-dashboard/pages/alerts.html
@@ -76,7 +76,7 @@
         </section>
 
         <!-- Filter Section -->
-        <section style="background: white; padding: 1.5rem; border-radius: 8px; margin-bottom: 2rem; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+        <section style="background: #333333; padding: 1.5rem; border-radius: 8px; margin-bottom: 2rem; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
             <h3 style="margin-bottom: 1rem; color: #0283C2;">Filter Alerts</h3>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem;">
                 <select style="padding: 0.75rem; border: 1px solid #e0e0e0; border-radius: 4px;">
@@ -102,7 +102,7 @@
         </section>
 
         <!-- Active Alerts -->
-        <section style="background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 2rem;">
+        <section style="background: #333333; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 2rem;">
             <h2 style="color: #0283C2; margin-bottom: 1.5rem;">Active Alerts</h2>
             <div style="display: flex; flex-direction: column; gap: 1rem;">
                 <!-- Critical Alert 1 -->
@@ -164,7 +164,7 @@
         </section>
 
         <!-- Alert History Table -->
-        <section style="background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 2rem;">
+        <section style="background: #333333; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 2rem;">
             <h2 style="color: #0283C2; margin-bottom: 1.5rem;">Alert History (Last 24 Hours)</h2>
             <div class="table-wrapper">
                 <table class="data-table">
