--- a/cs360-dashboard/pages/customers.html
+++ b/cs360-dashboard/pages/customers.html
@@ -37,7 +37,7 @@
         </header>
 
         <!-- Search and Filter -->
-        <section style="background: white; padding: 1.5rem; border-radius: 8px; margin-bottom: 2rem; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
+        <section style="background: #333333; padding: 1.5rem; border-radius: 8px; margin-bottom: 2rem; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);">
             <h3 style="margin-bottom: 1rem; color: #0283C2;">Search Customers</h3>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem;">
                 <input type="text" placeholder="Search by name or ID..." style="padding: 0.75rem; border: 1px solid #e0e0e0; border-radius: 4px; font-size: 0.95rem;">
@@ -57,7 +57,7 @@
         </section>
 
         <!-- Customers Table -->
-        <section style="background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 2rem;">
+        <section style="background: #333333; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 2rem;">
             <h2 style="color: #0283C2; margin-bottom: 1.5rem;">Customer List</h2>
             <div class="table-wrapper">
                 <table class="data-table">
@@ -130,7 +130,7 @@
         </section>
 
         <!-- Customer Segments -->
-        <section style="background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 2rem;">
+        <section style="background: #333333; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 2rem;">
             <h2 style="color: #0283C2; margin-bottom: 1.5rem;">Customer Segments</h2>
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem;">
                 <div style="padding: 1.5rem; background: #E8F5E9; border-radius: 8px; border-left: 4px solid #4CAF50;">
