--- a/cs360-dashboard/pages/qoe-analytics.html
+++ b/cs360-dashboard/pages/qoe-analytics.html
@@ -92,7 +92,7 @@
         </section>
 
         <!-- Detailed Metrics Table -->
-        <section style="background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 2rem;">
+        <section style="background: #333333; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 2rem;">
             <h2 style="color: #0283C2; margin-bottom: 1.5rem;">QoE Metrics by Location</h2>
             <div class="table-wrapper">
                 <table class="data-table">
@@ -165,7 +165,7 @@
         </section>
 
         <!-- Device Type Analysis -->
-        <section style="background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 2rem;">
+        <section style="background: #333333; padding: 2rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); margin-bottom: 2rem;">
             <h2 style="color: #0283C2; margin-bottom: 1.5rem;">QoE by Device Type</h2>
             <div class="table-wrapper">
                 <table class="data-table">
